# drone2report

./: LICENSE  README.md  drone2report.py  environment.yml  example_rgb_config.ini  pyproject.toml  sample_config.ini  test_sample.py
.github/workflows/: ci.yml  python-package-conda.yml
colab/: README.md  drone2report.ipynb
d2r/: analysis.py  config.py  dataset.py  dataset_formats.py  indexes.py  logger.py  misc.py  render.py  render_tools.py  task.py
d2r/analyses/: analysis_template.py  indexes.py  thumbnail.py
d2r/renders/: collect_tables.py  render_template.py  report.py
d2r/tasks/: ROIs.py  array_returning_indexes.py  explore_index_threshold.py  indexes.py  matrix_returning_indexes.py  task_template.py  thumbnail.py
docs/: README.md  drone2report.ipynb  mkdocs.yml  requirements.txt
examples/: README.md
examples/RGB/: example_rgb.tfw
examples/data/: example_dem.tiff
examples/ini/: RGB.ini  example_rgb_config.ini  multisource.ini  multispectral.ini  thermal.ini
examples/multi/: example_multi.tfw
examples/shapefile/: example_shapefile.dbf
examples/thermal/: example_thermal.shp  example_thermal.shx  example_thermal.tfw  example_thermal.tiff
jinja2_report_templates/sections/: analysis_block.html  raw_html.html  section_title.html
jinja2_report_templates/static/: style.css
jinja2_report_templates/templates/: base.html  footer.html  header.html  report.html
tests/: test_indexes.py
