[project]
name = "d2r"
version = "0.2.0"
description = "Config-driven pipeline for drone imagery analysis"
authors = [
  { name = "Nelson Nazzicari", email = "nelson.nazzicari@crea.gov.it" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "rasterio",
  "shapely",
  "pandas",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["d2r*"]
exclude = ["PR*", "colab"]


